--- a/practice .html
+++ b/practice .html
@@ -8,7 +8,7 @@
 
 
 <body>
-<div id="practice-twolwaybinding">
+<div id="practice">
 <button v-on:click="counter++">increase</button>
 
 
@@ -18,5 +18,5 @@
 <p>result::{{result()}}/{{output}}</p>
 </div>
 </body>
-<script type="text/javascript" src="practice-twolwaybinding.js"></script>
+<script type="text/javascript" src="practice.js"></script>
 </html>
