--- a/css.html
+++ b/css.html
@@ -12,9 +12,23 @@
 <body>
 <div id="practice">
 
-<div class="demo" @click="attachRed=!attachRed" :class="divClasses"></div>
-<div class="demo" :class="{'red':attachRed}"></div>
-<div class="demo"></div>
+
+<div
+            class="demo"
+            @click="attachRed= !attachRed"
+            :class="divClasses">
+    </div>
+    <div
+            class="demo"
+            :class="{red: !attachRed}">
+    </div>
+    <div
+            class="demo"
+            :class="[color,{red: !attachRed}]">
+    </div>
+    <hr>
+    <input type="text" v-model="color">
+
 
 </div>
 </body>
