stylling elements with array syntax

--- a/css.html
+++ b/css.html
@@ -22,7 +22,7 @@
             >
     </div>
     <div
-            class="demo"
+            class="demo"  :style="[mystyle,{height:width+'px'},{backgroundColor:'yellow'}]"
             >
     </div>
     <hr>
