--- a/conditional.html
+++ b/conditional.html
@@ -13,6 +13,11 @@
 <p v-else-if="show==true">else if you can see me! <span>span </span></p>
 <p v-else>now you can see me!</p>
 <p>do you aslo see me!</p>
+
+<template v-if="show">
+<h1> heading one template</h1>
+<p> page element in template</p>
+</template>
 <button @click="show=!show">Switch</button>
 </div>
 </body>
