--- a/conditional.html
+++ b/conditional.html
@@ -18,6 +18,7 @@
 <h1> heading one template</h1>
 <p> page element in template</p>
 </template>
+<p v-show="show">you can see me! with v-show</p>
 <button @click="show=!show">Switch</button>
 </div>
 </body>
