--- a/conditional.html
+++ b/conditional.html
@@ -21,7 +21,7 @@
 <p v-show="show">you can see me! with v-show</p>
 <button @click="show=!show">Switch</button>
 <ul>
-<li v-for="ingradient in ingradients">{{ingradient}}</li>
+<li v-for="(ingradient,index) in ingradients">{{ingradient}} ({{index}})</li>
 </ul>
 </div>
 </body>
