v-for to display numbers

--- a/conditional.html
+++ b/conditional.html
@@ -38,6 +38,8 @@
 <div v-for="(value,key,index) in person">{{key}}-{{value}}-({{index}})</div>
 </li>
 </ul>
+<hr>
+<div v-for="n in 20">{{n}}-{{Math.floor((Math.random()*10)+1)}}</div>
 </div>
 </body>
 <script type="text/javascript" src="conditional.js"></script>
