--- a/conditional.html
+++ b/conditional.html
@@ -21,9 +21,9 @@
 <p v-show="show">you can see me! with v-show</p>
 <button @click="show=!show">Switch</button>
 <ul>
-<li v-for="(ingradient,index) in ingradients">{{ingradient}} ({{index}})</li>
+<li v-for="(ingradient,index) in ingradients" :key="ingradient">{{ingradient}} ({{index}})</li>
 </ul>
-
+<button @click="ingradients.push('spices')">add new ingradient</button>
 <template v-for="(ingradient,i) in ingradients">
 <h1> {{ingradient}}</h1>
 <p> {{i}}</p>
